website/app/fb.css
@media all and (max-width: 640px) {
    /* Remove border from entire right pane, add it just to conversation */
    ._1q5- {
        border-left: 0 !important;
    }
    ._20bp {
        border-left: 1px solid rgba(0, 0, 0, .20);
    }
    
    /* Move over new conversation button */
    ._5l-3[role="banner"] {
        display:block !important;
    }
    a[href="/new"] {
        margin-right:-49px;
        float: right;
        position:relative;
        z-index: 10;
    }
    
    /* Move over search bar to make room for button */
    ._2y8y {
        padding-left: 41px !important;
    }
    
    /* Move gear icon up, place read indicator under geat icon */
    ._4-0h, ._2_a2.img {
        background-color: #FFF;
        border: 2px solid #FFF;
        border-radius: 50%;
        margin-top:-44px;
        margin-right:-2px;
    }
    
    /* Change borders on selected conversations */
    ._1ht2 ._4-0h, ._1ht2 ._2_a2.img {
        border-color: #F6F6F6;
        background-color: #F6F6F6;
    }
}

